force-app/main/default/objects/Job_Rasika__c/Job_Rasika__c.object-meta.xml
<CustomObject>
    <label>Job_Rasika</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Jobs_Rasika Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs_Rasika</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>