force-app/main/default/objects/Job_Rasika__c/fields/Certification_Required__c.field-meta.xml
<CustomField>
    <fullName>Certification_Required__c</fullName>
    <label>Certification Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMP (Project Management Professional)</fullName>
            </value>
            <value>
                <fullName>CMP (Certified Project Manager)</fullName>
            </value>
            <value>
                <fullName>MPM (Master Project Manager)</fullName>
            </value>
            <value>
                <fullName>Sun Certified</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>ORACLE</fullName>
            </value>
            <value>
                <fullName>Sybase</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>RedHat</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>