force-app/main/default/objects/Job_Rasika__c/fields/Hired_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Hired_Applicants__c</fullName>
    <description>This field indicates the count of the total Hired candidate has applied to this job</description>
    <label>Hired Applicants</label>
    <summaryFilterItems>
        <field>Candidate_Rasika__c.Status__c</field>
        <operation>equals</operation>
        <value>&quot;Hired&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Rasika__c.Job_Rasika__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>