force-app/main/default/objects/Job_Rasika__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs_Rasika</relationshipLabel>
    <relationshipName>Jobs_Rasika</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>