force-app/main/default/objects/Job_Rasika__c/fields/Qualifications_Required__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Required__c</fullName>
    <label>Qualifications Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>Bcom</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BTech.</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>B.A.</fullName>
            </value>
            <value>
                <fullName>B.Com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>