force-app/main/default/objects/Job_Rasika__c/fields/Total_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicants__c</fullName>
    <description>This field indicates the count of the total candidate has applied to this job</description>
    <label>Total Applicants</label>
    <summaryForeignKey>Candidate_Rasika__c.Job_Rasika__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>