force-app/main/default/objects/Job_Rasika__c/recordTypes/Developer.recordType-meta.xml
<RecordType>
    <fullName>Developer</fullName>
    <active>true</active>
    <label>Developer</label>
</RecordType>