force-app/main/default/objects/Job_Rasika__c/listViews/Active_Jobs.listView-meta.xml
<ListView>
    <fullName>Active_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Certification_Required__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>Expires_On__c</columns>
    <columns>Hired_Applicants__c</columns>
    <columns>Manager__c</columns>
    <columns>Number_of_Positions__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Qualifications_Required__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Required_Skills__c</columns>
    <columns>Salary_Offered__c</columns>
    <columns>Total_Applicants__c</columns>
    <filterScope>Mine</filterScope>
    <label>Active Jobs</label>
</ListView>