force-app/main/default/objects/Job_Rasika__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>NAME</columns>
    <columns>Total_Applicants__c</columns>
    <filterScope>Mine</filterScope>
    <label>Details</label>
</ListView>