force-app/main/default/objects/Job_Rasika__c/listViews/queue1_Job_Rasika.listView-meta.xml
<ListView>
    <fullName>queue1_Job_Rasika</fullName>
    <filterScope>Queue</filterScope>
    <label>queue1</label>
    <queue>queue1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>