force-app/main/default/objects/Job_Rasika__c/listViews/Vacancies.listView-meta.xml
<ListView>
    <fullName>Vacancies</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Hired_Applicants__c</columns>
    <columns>Total_Applicants__c</columns>
    <columns>Number_of_Positions__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vacancies</label>
</ListView>